--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,11 @@ h1{
     font-size: 50px;
     border: 5px solid white;
 }
-
+p{
+    color: whitesmoke;
+    text-align: center;
+    font-size: 25px;
+}
 .container{
     display: flex;
     background-color: midnightblue;
@@ -21,6 +25,10 @@ h1{
     margin:20px auto;
     align-items: center;
     box-shadow: 10px 10px 10px black;
+    border-radius: 20px;
+}
+.card:hover {
+  transform: scale(1.1);
 }
 body{
     background-color: black;
