--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@ p{
     align-items: center;
     box-shadow: 10px 10px 10px black;
     border-radius: 20px;
+    transition: 0.3s;
 }
 .card:hover {
   transform: scale(1.1);
@@ -43,4 +44,12 @@ body{
 }
 h2, h3{
     text-align: center;
+}
+@media screen and (max-width: 700px) {
+    .container {
+        flex-direction: column;
+    }
+    .card{
+        width: 100%;
+    }
 }
