--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,27 @@
 h1{
-    color: white;
+    color: darkgoldenrod;
     text-align: center;
     font-size: 50px;
-    border: 5px solid white;
+    padding-top: 50px;
 }
 p{
-    color: whitesmoke;
+    color: darkgoldenrod;
     text-align: center;
     font-size: 25px;
+    padding-bottom: 60px;
 }
 .container{
     display: flex;
-    background-color: #040137;
-    width: 90vw;
+    background-color: rgb(75, 77, 54);
+    width: 100vw;
     flex-wrap: wrap;
-    justify-content: space-around;
-    margin: 20px auto;
-    box-shadow: 10px 10px #888888;
+    justify-content: space-evenly;
+    margin: 10px auto;
 }
 .card{
-    background-color: beige;
+    background-color: rgb(69, 80, 22);
     width:22%;
-    height: 300px;
+    height: 400px;
     margin:20px auto;
     align-items: center;
     box-shadow: 10px 10px 10px black;
@@ -32,18 +32,24 @@ p{
   transform: scale(1.1);
 }
 body{
-    background-color: black;
+    background-color: rgb(19, 25, 0);
 }
 .card-img{
     display: flex;
-    width: 50%;
-    height: 50%;
+    width: 70%;
+    height: 60%;
     align-items: center;
     margin: 10px auto;
-    border-radius: 20px;
+    border-radius: 5px;
 }
-h2, h3{
+h2{
     text-align: center;
+    color: darkgoldenrod;
+    background-color: rgb(32, 35, 1);
+}
+h3{
+    text-align: center;
+    color: darkgoldenrod;
 }
 @media screen and (max-width: 700px) {
     .container {
