--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,64 @@
+body{
+    background-color: rgb(42, 43, 0);
+}
+.container{
+    display: flex;
+    background-color: rgb(75, 77, 54);
+    width: 100vw;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin: 10px auto;
+    border-radius: 10px;
+    background-color: rgb(19, 25, 0);
+}
+.card{
+    background-color: rgb(32, 35, 1);
+    width: 400px;
+    height: 500px;
+    margin: 20px auto;
+    border-radius: 10px;
+    box-shadow: 5px 5px 15px black;
+}
 
+h1{
+    color: darkgoldenrod;
+    text-align: center;
+    font-size: 50px;
+    padding-top: 50px;
+}
+p{
+    color: darkgoldenrod;
+    text-align: center;
+    font-size: 25px;
+    padding-bottom: 60px;
+}
+.card-img{
+    display: flex;
+    width: 70%;
+    max-width: 300px;
+    height: 60%;
+    max-height: 300px;
+    align-items: center;
+    margin: 10px auto;
+    border-radius: 5px;
+}
+h2{
+    text-align: center;
+    font-size: 22px;
+    color: darkgoldenrod;
+    background-color: rgb(32, 35, 1);
+}
+h3{
+    text-align: center;
+    color: darkgoldenrod;
+    padding-top: 20px;
+    font-size: 25px;
+}
+.card:hover{
+    transform: scale(1.07);
+    transition: all 0.5s ease-in-out;
+    box-shadow: 15px 15px 30px black;
+    cursor: pointer;
+}
+
+    
