--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rgb(9, 9, 0);
+    background-color: rgb(18, 18, 0);
 }
 .container{
     display: flex;
@@ -9,6 +9,8 @@ body{
     justify-content: space-around;
     margin: 10px auto;
     border-radius: 10px;
+    padding-bottom: 50px;
+    gap: 30px;
 }
 .card{
     background-color: rgb(32, 35, 1);
@@ -22,8 +24,9 @@ body{
 h1{
     color: darkgoldenrod;
     text-align: center;
-    font-size: 50px;
-    padding-top: 50px;
+    font-size: 60px;
+    padding: 50px;
+    line-height: 30px;
 }
 p{
     color: darkgoldenrod;
@@ -45,7 +48,7 @@ h2{
     text-align: center;
     font-size: 22px;
     color: darkgoldenrod;
-    background-color: rgb(32, 35, 1);
+    background-color: rgb(14, 15, 0);
 }
 h3{
     text-align: center;
@@ -55,9 +58,16 @@ h3{
 }
 .card:hover{
     transform: scale(1.07);
-    transition: all 0.5s ease-in-out;
+    transition: all 0.3s ease-in-out;
     box-shadow: 15px 15px 30px black;
     cursor: pointer;
+}
+
+@media (max-width: 450px) {
+    .container{
+        flex-direction: column;
+        align-items: center;
+    }
 }
 
     
