--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,10 @@ h3 {
 .btn {
     width: 80px;
     height: 70px;
-    float: right;
+    float: right
+}
+.btn {
+    transform: translate(-20%, -60%);
 }
 
 @media (max-width: 450px) {
@@ -76,7 +79,3 @@ h3 {
     }
 }
 
-
-.btn {
-    transform: translate(-20%, -60%);
-}
