--- a/styles.css
+++ b/styles.css
@@ -64,9 +64,11 @@ h3 {
 }
 
 .btn {
-    width: 80px;
-    height: 70px;
+    transform: translate(-20%, -60%);
+    width: 110px;
+    height: 50px;
     float: right;
+    border-radius: 20px;
 }
 
 @media (max-width: 450px) {
@@ -77,6 +79,3 @@ h3 {
 }
 
 
-.btn {
-    transform: translate(-20%, -60%);
-}
