--- a/styles.css
+++ b/styles.css
@@ -64,17 +64,17 @@ h3 {
 }
 
 .btn {
+    cursor: pointer;
     transform: translate(-20%, -60%);
+    color: rgb(255, 255, 255);
+    background-color: rgb(12, 20, 0);
     width: 110px;
     height: 50px;
     float: right;
-    border-radius: 20px;
+    border-radius: 18px;
     width: 80px;
     height: 70px;
     float: right
-}
-.btn {
-    transform: translate(-20%, -60%);
 }
 
 @media (max-width: 450px) {
