--- a/styles.css
+++ b/styles.css
@@ -77,11 +77,17 @@ h3 {
     float: right
 }
 
+.filter-btn {
+    display: inline-block;
+    font-size: 18px;
+    margin: 10px;
+    padding: 4px 15px;
+    cursor: pointer;
+}
+
 @media (max-width: 450px) {
     .container {
         flex-direction: column;
         align-items: center;
     }
 }
-
-
