--- a/styles.css
+++ b/styles.css
@@ -83,6 +83,8 @@ h3 {
     margin: 10px;
     padding: 4px 15px;
     cursor: pointer;
+    background-color: rgb(126, 124, 21);
+    font-family:Georgia, 'Times New Roman', Times, serif;
 }
 
 @media (max-width: 450px) {
