--- a/styles.css
+++ b/styles.css
@@ -73,17 +73,20 @@ h3 {
     border-radius: 18px;
     width: 80px;
     height: 70px;
-    float: right
 }
 
 .filter-btn {
     display: inline-block;
-    font-size: 18px;
     margin: 10px;
+    justify-content: space-evenly;
+    font-size: 18px;
     padding: 4px 15px;
     cursor: pointer;
     background-color: rgb(126, 124, 21);
     font-family:Georgia, 'Times New Roman', Times, serif;
+}
+.btns {
+    text-align: center;
 }
 .cart {
     background-color: white;
