--- a/styles.css
+++ b/styles.css
@@ -62,22 +62,15 @@ h3 {
     font-size: 25px;
 }
 
-.btn {
-    cursor: pointer;
+
+
+.filter-btn {
+    display: block;
     transform: translate(-20%, -60%);
-    color: rgb(255, 255, 255);
-    background-color: rgb(12, 20, 0);
+    margin: 10px;
     width: 110px;
     height: 50px;
     float: right;
-    border-radius: 18px;
-    width: 80px;
-    height: 70px;
-}
-
-.filter-btn {
-    display: inline-block;
-    margin: 10px;
     justify-content: space-evenly;
     font-size: 18px;
     padding: 4px 15px;
@@ -85,7 +78,7 @@ h3 {
     background-color: rgb(126, 124, 21);
     font-family:Georgia, 'Times New Roman', Times, serif;
 }
-.btns {
+.cart-btn {
     text-align: center;
 }
 .cart {
