--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,20 @@ h3 {
     font-size: 25px;
 }
 
+.add-to-cart-btn {
+     display: block;
+    transform: translate(-20%, -60%);
+    margin: 10px;
+    width: 110px;
+    height: 50px;
+    float: right;
+    justify-content: space-evenly;
+    font-size: 18px;
+    padding: 4px 15px;
+    cursor: pointer;
+    background-color: rgb(126, 124, 21);
+    font-family:Georgia, 'Times New Roman', Times, serif;
+}
 
 
 .filter-btn {
@@ -78,13 +92,14 @@ h3 {
     background-color: rgb(126, 124, 21);
     font-family:Georgia, 'Times New Roman', Times, serif;
 }
-.cart-btn {
+#cart-btn {
     text-align: center;
 }
-.cart {
+#cart {
     background-color: white;
     width: 800px;
-    height: 145px;
+    max-height: 80vh;
+    overflow-y: auto; 
     padding-left: 5px;
     padding-bottom: 5px;
 }
